--- a/locales/es.json
+++ b/locales/es.json
@@ -20,7 +20,7 @@
       "update": "Actualización del carrito.",
       "checkout": "Checkout",
       "accept_terms": "Debes aceptar nuestros términos y condiciones.",
-      "accepted_terms": "¿Términos/condiciones aceptados?",
+      "accepted_terms": "¿Términos\/condiciones aceptados?",
       "view_cart": "Ver carrito",
       "empty": "Su carrito está vacio.",
       "savings": "Su ahorro",
@@ -35,7 +35,7 @@
       "add_message": "Agregó un producto: ",
       "total_message": {
         "one": "y tienes {{ count }} producto en el carrito",
-        "other":  "y tiene {{ count }} productos en el carrito"
+        "other": "y tiene {{ count }} productos en el carrito"
       },
       "qualified_shipping_message": "¡Felicidades! Su pedido está calificado para el envío libre"
     },
@@ -320,8 +320,8 @@
         "view_store_info": "Ver información de la tienda",
         "check_other_stores": "Verificar disponibilidad en otras tiendas",
         "pick_up_available": "Retiro disponible",
-        "pick_up_available_at_html": "Retiro disponible en <strong>{{ location_name }}</strong>",
-        "pick_up_unavailable_at_html": "Retiro no disponible actualmente en <strong>{{ location_name }}</strong>",
+        "pick_up_available_at_html": "Retiro disponible en <strong>{{ location_name }}<\/strong>",
+        "pick_up_unavailable_at_html": "Retiro no disponible actualmente en <strong>{{ location_name }}<\/strong>",
         "unavailable": "No se pudo cargar la disponibilidad de retiro",
         "refresh": "Actualizar"
       }
@@ -419,7 +419,7 @@
       "submit": "Enviar",
       "placeholder": "Dirección de correo electrónico",
       "thank_you": "¡Gracias por registrarse!",
-      "thank_you_with_code_html": "Gracias por registrarte! ¡Puede usar este código <span> Descuento 10% </span> para el próximo pedido!",
+      "thank_you_with_code_html": "Gracias por registrarte! ¡Puede usar este código <span> Descuento 10% <\/span> para el próximo pedido!",
       "error_message": "¡Este cliente ya está suscrito!",
       "product_notification_for": "Notificación de producto para",
       "newsletter_product_availability": "Avísame cuando esté disponible",
