--- a/locales/it.json
+++ b/locales/it.json
@@ -180,7 +180,7 @@
       "update": "Aggiorna carrello",
       "checkout": "Pagamento",
       "accept_terms": "Devi accettare i nostri termini e condizioni.",
-      "accepted_terms": "Termini/condizioni accettati?",
+      "accepted_terms": "Termini\/condizioni accettati?",
       "view_cart": "Visualizza il carrello",
       "empty": "Il tuo carrello è vuoto.",
       "savings": "Risparmi",
