--- a/locales/pt.json
+++ b/locales/pt.json
@@ -37,7 +37,7 @@
       "submit": "Inscrever-se",
       "placeholder": "Endereço de e-mail",
       "thank_you": "Obrigado por se inscrever!",
-      "thank_you_with_code_html": "Obrigado por inscrever-se! Você pode usar este código <span> Desconto de 10% </span> para o próximo pedido!",
+      "thank_you_with_code_html": "Obrigado por inscrever-se! Você pode usar este código <span> Desconto de 10% <\/span> para o próximo pedido!",
       "error_message": "Este cliente já está inscrito!",
       "product_notification_for": "Notificação de produto para",
       "newsletter_product_availability": "Avise-me quando estiver disponível",
@@ -180,7 +180,7 @@
       "update": "Atualizar Carrinho",
       "checkout": "Finalizar Compra",
       "accept_terms": "Você deve aceitar nossos termos e condições.",
-      "accepted_terms": "Aceitou os termos/condições?",
+      "accepted_terms": "Aceitou os termos\/condições?",
       "view_cart": "Ver carrinho",
       "empty": "Seu carrinho está vazio.",
       "savings": "Você está economizando",
@@ -286,7 +286,7 @@
       "city": "Cidade",
       "country": "País",
       "province": "Província",
-      "zip": "Código Postal/CEP",
+      "zip": "Código Postal\/CEP",
       "phone": "Telefone",
       "set_default": "Definir como endereço padrão",
       "add": "Adicionar Endereço",
@@ -378,10 +378,10 @@
       "news_title": "Últimas Notícias"
     },
     "onboarding": {
-      "no_products_html": "Você não tem produtos na sua coleção de Home page. Teste texto aparecerá até que você <a href=\"/admin/custom_collections\">adicione um produto a esta coleção</a>.",
+      "no_products_html": "Você não tem produtos na sua coleção de Home page. Teste texto aparecerá até que você <a href=\"\/admin\/custom_collections\">adicione um produto a esta coleção<\/a>.",
       "add_product": "Escoger produto",
       "product_title": "Título de produto",
-      "no_collections_html": "Você não tem coleções para mostrar aqui. <a href=\"/admin/custom_collections\">Adicione algumas coleções</a> para irem junto com a Página Inicial padrão.",
+      "no_collections_html": "Você não tem coleções para mostrar aqui. <a href=\"\/admin\/custom_collections\">Adicione algumas coleções<\/a> para irem junto com a Página Inicial padrão.",
       "no_description": "Esta é um exemplo de descrição de produto. Uma vez que você adicionar um produto, este texto irá mudar.",
       "no_content": "Esta seção atualmente não tem conteúdo. Adicione conteúdo a esta seção usando a barra lateral.",
       "collection_image": "Imagem de Coleção",
@@ -484,8 +484,8 @@
         "view_store_info": "Ver as informações da loja",
         "check_other_stores": "Verificar a disponibilidade em outras lojas",
         "pick_up_available": "Retirada disponível",
-        "pick_up_available_at_html": "Retirada disponível em <strong>{{ location_name }}</strong>",
-        "pick_up_unavailable_at_html": "Retirada em <strong>{{ location_name }}</strong> indisponível no momento",
+        "pick_up_available_at_html": "Retirada disponível em <strong>{{ location_name }}<\/strong>",
+        "pick_up_unavailable_at_html": "Retirada em <strong>{{ location_name }}<\/strong> indisponível no momento",
         "unavailable": "Não foi possível carregar a disponibilidade de retirada.",
         "refresh": "Atualizar"
       }
